# kdelibs

./: CMakeLists.txt
cmake/modules/: FindQt4.cmake  KDE4Macros.cmake
emscripten-stuff/: Toolchain-emscripten.cmake
kdecore/: CMakeLists.txt  fakes.c
kdecore/config/: kconfigini.cpp
kdecore/io/: kdirwatch_p.h  kfilesystemtype_p.cpp
kdecore/kconfig_compiler/: CMakeLists.txt
kdecore/kernel/: ktoolinvocation_x11.cpp
kdecore/network/: ksocketfactory.cpp  ktcpsocket.cpp  ktcpsocket.h  ktcpsocket_p.h
kdecore/services/: kmimetype.cpp
kdecore/util/: kexportplugin.h
kdesu/: kdesu_stub.c
kdeui/: CMakeLists.txt
kdeui/notifications/: kstatusnotifieritem.cpp
kdeui/util/: kcrash.cpp
kdeui/widgets/: kcapacitybar.cpp
kfile/: kfilemodule.cpp
kio/: CMakeLists.txt
kio/kio/: accessmanager.cpp  accessmanagerreply_p.cpp  kfilemetainfo.cpp  kprotocolmanager.cpp  slaveinterface.cpp  tcpslavebase.cpp
kio/misc/: CMakeLists.txt
kioslave/http/: CMakeLists.txt
kioslave/http/kcookiejar/: kcookieserver.cpp
kparts/: CMakeLists.txt
kpty/: kpty.cpp
kutils/kemoticons/: CMakeLists.txt
kutils/kemoticons/providers/adium/: adium_emoticons.cpp
kutils/kemoticons/providers/kde/: kde_emoticons.cpp
kutils/kemoticons/providers/pidgin/: pidgin_emoticons.cpp
kutils/kemoticons/providers/xmpp/: xmpp_emoticons.cpp
solid/: CMakeLists.txt
